# uhas-sms-webapp

./: .env.e2e  .env.local.example  .env.test  .firebaserc  .gitignore  CLAUDE.md  README.md  docker-compose.yml  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  storage.rules  tailwind.config.ts
.husky/: pre-commit
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/baseline/: 0001_drizzle_port.sql
apps/api/alembic/versions/: 0be2e817bc16_scheme_comments_thread_table.py  0f113e0b8e45_student_medical_and_documents.py  171bf85ec8f4_add_user_preferences_table.py  18e0239d4c15_add_report_card_pdf_cache_table.py  1b63efba0753_announcement_notification_prefs.py  1cb5816e6a2a_sms_log_table.py  212387c856ab_attendance_absent_notification_prefs.py  256397faf972_drop_dead_school_branding_and_email_.py  2741307b0d04_staff_profile_depth.py  32cd865749cc_make_users_email_nullable_for_phone_.py  414847df8128_assignments_table.py  41d7eda98e38_guardians_dual_identifier_email_or_phone.py  4af97dcd8634_promotion_comments_thread_and_reminders.py  4d512eb4c75b_add_staff_id_to_guardians_for_staff_as_.py  60606060cr01_class_report_hos_comment.py  63bbd48d03f4_audit_log_before_after_text_to_jsonb.py  67ac59c31f61_password_reset_cooldown.py  72f4a80e3c11_promotions_indexes.py  741534365f8f_assignment_created_notification_prefs.py  7c8672899665_fees_tables.py  7da937dacb0e_drop_school_session_timeout_column.py  7f1e7b783be2_promotion_notification_prefs.py  8de759ec94f2_leave_management_depth.py  8f92d31ce4a7_audit_log_school_created_idx.py  91af2c7d2a55_notifications_audience_indexes.py  9f2c7a41e8b3_report_card_polish.py  a1b2c3d4e5f6_current_term_override.py  a4c19e7b5e88_calendar_appointments_indexes.py  b1bbb27bb731_lesson_plan_reviews_child_table.py  c35321d02a8e_leave_request_notification_prefs.py  c3a7f9e2b1d4_appointment_notification_prefs.py  c3f4adcea23b_add_exams_scores_tables_clean_staff_.py  d5e1b42497cf_learner_fees_last_reminder_sent_at.py  f259fcd31b08_scheme_weekly_entries_table.py  f320969e6074_scheme_notification_prefs.py  fb2f367656c5_drizzle_baseline_port.py
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  deps.py  errors.py  inngest.py  observability.py  pagination.py  phone.py  rate_limit.py  roles.py  school_structure.py  security.py  slug.py
apps/api/app/core/tests/: test_deps.py  test_inngest.py  test_phone.py  test_rate_limit.py  test_security.py
apps/api/app/features/announcements/: audience.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/appointments/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/assignments/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/attendance/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/audit/: actions.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/auth/: router.py  schema.py
apps/api/app/features/calendar/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/classes/: model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/enrollments/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/exams/: class_reports_repo.py  class_reports_svc.py  compute.py  constants.py  model.py  report_card_pdf.py  report_card_repo.py  report_card_svc.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/fees/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/guardians/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/health/: router.py  schema.py
apps/api/app/features/leave_requests/: constants.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/integrations/: storage.py
apps/api/app/scripts/: seed_reference.py
(+1044 files in other folders)
